AO3-5239 Fixes for single simple form style (#4248)
* AO3-5239 Don't apply autocomplete highlighting to input li

* AO3-5239 Let input expand when entering many tokens

Otherwise, there's just whitespace between the field and the submit button.

* AO3-5239 Remove unnecessary vertical align

* AO3-5239 Remove extra blank line

* AO3-5239 Code comments good

* AO3-5239 Update other instances of li.selected

--- a/public/stylesheets/masters/reversi/reversi_site_screen_.css
+++ b/public/stylesheets/masters/reversi/reversi_site_screen_.css
@@ -159,7 +159,7 @@ fieldset fieldset.listbox,
 #footer a:hover,
 #footer a:focus,
 .autocomplete .dropdown ul li:hover,
-li.selected,
+.autocomplete .dropdown li.selected,
 a.tag:hover,
 .listbox .heading a.tag:visited:hover,
 .symbol .question,
